2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* as-build-custom.c (as_insert_custom): Don't use vg_cap_copy but
	vg_cap_copy_simple.
	* as.h (as_insert_full): Likewise.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (hurd_activation_fetch): Use
	vg_thread_activation_collect_send, not
	rm_thread_activation_collect_send.
	(hurd_activation_handler_init_early): Use
	vg_thread_exregs_send_marshal, not rm_thread_exregs_send_marshal.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* anonymous.h: Don't include <hurd/exceptions.h>.
	* as.h: Likewise.
	* exceptions.c: Likewise.
	* map.h: Likewise.
	* message-buffer.c: Likewise.
	* mm-init.c: Likewise.
	* as-build.c: Don't include <hurd/exceptions.h>.  Include
	<viengoos/thread.h> and <viengoos/messenger.h>.
	* as-dump.c: Include <viengoos/thread.h> and
	<viengoos/messenger.h>.
	* as-lookup.c: Likewise.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* ia32-exception-entry.S: Don't include <hurd/exceptions.h>.
	Include <hurd/stddef.h>.

2008-12-16  Neal H. Walfield  <neal@gnu.org>

	* ia32-exception-entry.S (UTCB_SAVED_THREAD_STATE): Don't define.
	(UTCB_ACTIVATION_FRAME_STACK): Adjust to new structure layout.

2008-12-16  Neal H. Walfield  <neal@gnu.org>

	* storage.c (num_threads): New function.
	(FREE_PAGES_LOW_WATER): Make it a function of the number of
	threads.
	(FREE_PAGES_SERIALIZE): Likewise.

2008-12-16  Neal H. Walfield  <neal@gnu.org>

	* storage.c (struct storage_desc) [!NDEBUG]: Add field owner.
	(shadow_setup): Set DESC->OWNER appropriately.
	(storage_alloc): Likewise.
	(storage_free_): Likewise.
	(storage_init): Likewise.
	
	(storage_alloc): Move code that updates DESC to before we call
	rm_folio_object_alloc.  Unlock DESC->LOCK before calling it.

2008-12-16  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (anonymous_pager_alloc): Replace use of l4_msb with
	vg_msb.
	* as-build.c (as_build): Replace use of l4_msb64 with vg_msb64.